Closed
Bug 366312
Opened 19 years ago
Closed 19 years ago
Yahoo Mail: Send does not work
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jayramj, Assigned: igor)
References
()
Details
(Whiteboard: regression testcase)
Attachments
(2 files)
|
934 bytes,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
|
255 bytes,
text/html
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070108 Minefield/3.0a2pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070108 Minefield/3.0a2pre
Yahoo mail send does not work. Get following error in JavaScript console
Error: document.all has no properties
Source File: http://us.js2.yimg.com/us.js.yimg.com/lib/pim/r/medici/15_6/mail/compose.js
Line: 243
Reproducible: Always
Steps to Reproduce:
1. Login to yahoo mail
2. Compose/Reply
3. Click on Send
Actual Results:
Send does not succeed. An error is displayed in Javascript console
"Error: document.all has no properties
Source File: http://us.js2.yimg.com/us.js.yimg.com/lib/pim/r/medici/15_6/mail/compose.js
Line: 243"
Expected Results:
Mail is succesfully sent
New profile no extensions
Works in 20070106 nightly.
Doesn't work in 20070107_0547 hourly
Comment 2•19 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070108 Minefield/3.0a2pre
Yep, I see the same.
Updated•19 years ago
|
Assignee: nobody → general
Status: UNCONFIRMED → NEW
Component: General → JavaScript Engine
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → general
Version: unspecified → Trunk
Updated•19 years ago
|
Whiteboard: regression
| Assignee | ||
Comment 3•19 years ago
|
||
Comment 4•19 years ago
|
||
Updated•19 years ago
|
Whiteboard: regression → regression testcase
| Assignee | ||
Comment 5•19 years ago
|
||
(In reply to comment #4)
> Created an attachment (id=250863) [details]
> testcase
Thanks for the test case, now I can see that the fix works.
Comment 6•19 years ago
|
||
Comment on attachment 250859 [details] [diff] [review]
Fix v1
Wow, I read that is if it were inverted -- sorry about that.
/be
Attachment #250859 -
Flags: review?(brendan) → review+
| Assignee | ||
Comment 7•19 years ago
|
||
I committed the patch from comment 3 to the trunk:
Checking in jsobj.c;
/cvsroot/mozilla/js/src/jsobj.c,v <-- jsobj.c
new revision: 3.319; previous revision: 3.318
done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 8•19 years ago
|
||
I need to update the way the browser based tests are generated so that this test is run in quirks mode so that undetected document.all is enabled.
Flags: in-testsuite?
Comment 9•18 years ago
|
||
Robert, do you think this test is more appropriate for the mochikit test framework?
Comment 10•18 years ago
|
||
yeah, can probably swing this.(In reply to comment #9)
> Robert, do you think this test is more appropriate for the mochikit test
> framework?
>
yeah, seems like a good match.
Comment 11•18 years ago
|
||
I can't currently do the test for this one in the JS test suite since the browser tests currently run in pages with standards mode where document.all isn't supported. Either a mochikit test or an option in the JS test suite to load pages in quirks mode is needed.
You need to log in
before you can comment on or make changes to this bug.
Description
•