Bug 366312: fixing document.all detecting regression from bug 365608. r=brendan